--- a/Signal/translations/ar.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ar.lproj/PluralAware.stringsdict
@@ -1101,6 +1101,30 @@
 			<string>لا يمكنك مشاركة أكثر من %1$d عنصر.</string>
 		</dict>
 	</dict>
+	<key>INACTIVE_LINKED_DEVICE_REMINDER_MEGAPHONE_BODY_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>zero</key>
+			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<key>one</key>
+			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within one day.</string>
+			<key>two</key>
+			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<key>few</key>
+			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<key>many</key>
+			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<key>other</key>
+			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+		</dict>
+	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
