--- a/Signal/translations/bn.lproj/PluralAware.stringsdict
+++ b/Signal/translations/bn.lproj/PluralAware.stringsdict
@@ -733,6 +733,22 @@
 			<string>আপনি %1$dটির বেশি আইটেম শেয়ার করতে পারবেন না।</string>
 		</dict>
 	</dict>
+	<key>INACTIVE_LINKED_DEVICE_REMINDER_MEGAPHONE_BODY_%d</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within one day.</string>
+			<key>other</key>
+			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+		</dict>
+	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
