--- a/Signal/translations/ja.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ja.lproj/PluralAware.stringsdict
@@ -652,7 +652,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>「%2$@」のリンクを維持するために、%1$d日以内にその端末でSignalを開いてください。</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
