--- a/Signal/translations/nb.lproj/PluralAware.stringsdict
+++ b/Signal/translations/nb.lproj/PluralAware.stringsdict
@@ -744,9 +744,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within one day.</string>
+			<string>For å beholde koblingen til %2$@ må du åpne Signal på enheten innen %1$d dag.</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>For å beholde koblingen til %2$@ må du åpne Signal på enheten i løpet av de neste %1$d dagene.</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
