--- a/Signal/translations/pt_PT.lproj/PluralAware.stringsdict
+++ b/Signal/translations/pt_PT.lproj/PluralAware.stringsdict
@@ -744,9 +744,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within one day.</string>
+			<string>Para manter &quot;%2$@&quot; conectado, abra o Signal nesse dispositivo dentro de %1$d dia.</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>Para manter &quot;%2$@&quot; conectado, abra o Signal nesse dispositivo dentro de %1$d dias.</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
