--- a/Signal/translations/yue.lproj/PluralAware.stringsdict
+++ b/Signal/translations/yue.lproj/PluralAware.stringsdict
@@ -652,7 +652,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>如果想保留「 %2$@ 」嘅連結，請喺 %1$d 日之內係嗰部裝置度打開 Signal。</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
