--- a/Signal/translations/ar.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ar.lproj/PluralAware.stringsdict
@@ -1112,17 +1112,17 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>zero</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>لتُبقي &quot;%2$@&quot; مرتبطًا، افتح سيجنال على ذلك الجهاز في غضون %1$d أيام.</string>
 			<key>one</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within one day.</string>
+			<string>لتُبقي &quot;%2$@&quot; مرتبطا، افتح سيجنال على ذلك الجهاز في غضون %1$d يوم.</string>
 			<key>two</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>لتُبقي &quot;%2$@&quot; مرتبطا، افتح سيجنال على ذلك الجهاز في غضون %1$d يومين.</string>
 			<key>few</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>لتُبقي &quot;%2$@&quot; مرتبطا، افتح سيجنال على ذلك الجهاز في غضون %1$d أيام.</string>
 			<key>many</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>لتُبقي &quot;%2$@&quot; مرتبطا، افتح سيجنال على ذلك الجهاز في غضون %1$d يومًا.</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>لتُبقي &quot;%2$@&quot; مرتبطا، افتح سيجنال على ذلك الجهاز في غضون %1$d يوم.</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
