--- a/Signal/translations/id.lproj/PluralAware.stringsdict
+++ b/Signal/translations/id.lproj/PluralAware.stringsdict
@@ -652,7 +652,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>Agar &quot;%2$@&quot; tetap terhubung, buka Signal di perangkat tersebut dalam %1$d hari.</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
