--- a/Signal/translations/sk.lproj/PluralAware.stringsdict
+++ b/Signal/translations/sk.lproj/PluralAware.stringsdict
@@ -928,13 +928,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within one day.</string>
+			<string>Ak chcete ponechať zariadenie „%2$@“ prepojené, do %1$d dňa otvorte na danom zariadení Signal.</string>
 			<key>few</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>Ak chcete ponechať zariadenie „%2$@“ prepojené, do %1$d dní otvorte na danom zariadení Signal.</string>
 			<key>many</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>Ak chcete ponechať zariadenie „%2$@“ prepojené, do %1$d dňa otvorte na danom zariadení Signal.</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>Ak chcete ponechať zariadenie „%2$@“ prepojené, do %1$d dní otvorte na danom zariadení Signal.</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
