--- a/Signal/translations/sv.lproj/PluralAware.stringsdict
+++ b/Signal/translations/sv.lproj/PluralAware.stringsdict
@@ -744,9 +744,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within one day.</string>
+			<string>För att hålla &quot;%2$@&quot; länkad, öppna Signal på den enheten inom %1$d dag.</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>För att hålla &quot;%2$@&quot; länkad, öppna Signal på den enheten inom %1$d dagar.</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
