--- a/Signal/translations/ug.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ug.lproj/PluralAware.stringsdict
@@ -652,7 +652,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>«%2$@» نى ئۇلانغان ھالەتتە ساقلاش ئۈچۈن %1$d كۈن ئىچىدە Signal نى ئۇ ئۈسكۈنىدە ئېچىڭ.</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
