--- a/Signal/translations/ur.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ur.lproj/PluralAware.stringsdict
@@ -744,9 +744,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within one day.</string>
+			<string>&quot;%2$@&quot; کو مربوط رکھنے کے لیے، %1$d دن کے اندر اس ڈیوائس پر Signal کھولیں۔</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>&quot;%2$@&quot; کو مربوط رکھنے کے لیے، %1$d دنوں کے اندر اس ڈیوائس پر Signal کھولیں۔</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
