--- a/Signal/translations/vi.lproj/PluralAware.stringsdict
+++ b/Signal/translations/vi.lproj/PluralAware.stringsdict
@@ -652,7 +652,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>Để giữ liên kết với &quot;%2$@&quot;, mở Signal trên thiết bị đó trong vòng %1$d ngày.</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
