--- a/Signal/translations/zh_CN.lproj/PluralAware.stringsdict
+++ b/Signal/translations/zh_CN.lproj/PluralAware.stringsdict
@@ -652,7 +652,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>如要继续链接“%2$@”，请在 %1$d 天内打开该设备上的 Signal。</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
