--- a/Signal/translations/zh_TW.lproj/PluralAware.stringsdict
+++ b/Signal/translations/zh_TW.lproj/PluralAware.stringsdict
@@ -652,7 +652,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>other</key>
-			<string>To keep &quot;%2$@&quot; linked, open Signal on this device within %1$d days.</string>
+			<string>若要保留「 %2$@ 」的連結，請於 %1$d 天內在該裝置開啟 Signal。</string>
 		</dict>
 	</dict>
 	<key>MANY_GROUPS_IN_COMMON_%d</key>
