Update release notes

--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Wir hatten uns eigentlich vorgenommen, dass wir das nie tun würden, dass wir nicht wie die anderen Apps mit ihren lahmen Versionshinweisen sein würden – aber in diesem Update geht es tatsächlich nur um »Fehlerbehebungen und Performance-Verbesserungen«.
+• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
