--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Obiecaliśmy sobie, że nigdy tego nie zrobimy – że nie będziemy tacy jak wydawcy innych aplikacji i nie opublikujemy lakonicznych informacji dotyczących aktualizacji, ale tym razem to naprawdę tylko „poprawki błędów i ulepszenia wydajności”.
+• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
