--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• Vi sagde til os selv, at vi aldrig ville gøre dette, at vi ikke ville være som de andre apps med deres dovne udgivelsesnoter, men denne opdatering indeholder faktisk "fejlrettelser og ydeevneforbedringer."
+• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
