--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• We zeiden tegen onszelf dat we dit nooit zouden doen, dat we niet zijn zoals andere apps met hun nietszeggende release notes. Maar deze update bevat 'bugfixes en prestatieverbeteringen'.
+• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
