--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Ne-am spus că nu vom face niciodată acest lucru, că nu vom fi ca celelalte aplicații cu notele lor clasice de lansare, dar această actualizare chiar include „remedieri de erori și îmbunătățiri de performanță”.
+• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
