--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Ми обіцяли собі, що ніколи такого не зробимо, ніколи не будемо, як усі інші застосунки з їх ледачими описами оновлень, але нове оновлення дійсно містить просто «виправлення помилок і загальні поліпшення».
+• Now you can react with any emoji during a Signal call. Smile even if your camera is off, share a heart if you love what you're hearing, or vote for sushi instead of pizza without saying a word. And you'll even see an animation of everyone's emojional outburst if enough people in the call react with the same emoji all at once.
